--- a/July7/FirstPage_basic.html
+++ b/July7/FirstPage_basic.html
@@ -7,6 +7,12 @@
 
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
+<form>
+First Name: <input type="text"> <br><br>
+Last Nmae: <input type="text"> <br><br>
+Password: <input type="text"> <br>
+ <input type="submit">
+</form>
 
 </body>
 </html>
