--- a/July7/FirstPage_basic.html
+++ b/July7/FirstPage_basic.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Form Building</title>
 </head>
 <body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-<form>
-First Name: <input type="text"> <br><br>
-Last Nmae: <input type="text"> <br><br>
-Password: <input type="text"> <br>
- <input type="submit">
-</form>
-
+	<h1>This is a Heading</h1>
+	<p>This is a paragraph.</p>
+	<fieldset>
+	<legend>Personal Information:</legend>
+		<form>
+			First Name: <input type="text"> <br><br>
+			Last Nmae: <input type="text"> <br><br>
+			Password: <input type="text"> <br>
+			<input type="submit">
+		</form>
+	</fieldset>
 </body>
 </html>
