--- a/July9/HomeWork9th_July.html
+++ b/July9/HomeWork9th_July.html
@@ -19,6 +19,7 @@
 				
 			</form>
 		</fieldset>
+		<script src= "Sample.js" type="text/javascript"></script>
 
 		
 		<fieldset>
@@ -30,9 +31,9 @@
 					<a href="=http://gmail.com" target="_balnk">gmail.com</a><br><br>
 
 					<label>Password</label>
-					<input type="Password" name="psd">
+					<input type="Password" name="psd" maxlength="20">
 					<label>Re-Type Password</label>
-					<input type="password" name="psd">
+					<input type="password" name="psd" maxlength="20">
 					<input type="button" value="Submit"> <br><br>
 					<input type="button" value="Already Got an ID?">
 				</form>
@@ -46,11 +47,17 @@
 				<input type="checkbox" name="HTML"> jQuary
 				<input type="checkbox" name="HTML"> JavaScript <br><br>
 				<label>Exprience (In Years)</label> 
-				<input type="Number" name=> <br>
+				<input type="Number"> 
+				<input type="button" value="submit"><br>
 			</form>	
 		</fieldset> <br>
 		<input type="button" value="Submit">
+		<iframe width="420" height="315" src="https://www.youtube.com/embed/LVX_3amQ6P8" frameborder="0" allowfullscreen></iframe> <dr>
+
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3649.5385199134944!2d90.4349424!3d23.8350038!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c615ed5b5e8b%3A0x93e0e664a0024e63!2sLake+City+Concord%2C+Dhaka+1229%2C+Bangladesh!5e0!3m2!1sen!2sus!4v1436579648075" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 	</fieldset>
 </body>
 </html>
+
+
